update README and configuration templates for new example projects: portfolio-site and game-website

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -19,7 +19,7 @@ server {
     }
 
     # Ondersteuning voor project subdirectories
-    # Bijvoorbeeld: http://localhost/project1 of http://localhost/project2
+    # Bijvoorbeeld: http://localhost/portfolio-site of http://localhost/game-website
     # Elke subdirectory in www/ wordt automatisch beschikbaar
 
     # PHP-FPM configuration
