--- a/docker/nginx/project-template.conf
+++ b/docker/nginx/project-template.conf
@@ -1,22 +1,22 @@
 # Template voor project-specifieke virtual hosts
 # Kopieer dit bestand en pas aan voor elk project
-# Bijvoorbeeld: project1.conf, project2.conf
+# Bijvoorbeeld: portfolio-site.conf, game-website.conf
 # 
 # Om te gebruiken:
-# 1. Kopieer dit bestand: cp project-template.conf project1.conf
+# 1. Kopieer dit bestand: cp project-template.conf portfolio-site.conf
 # 2. Pas de server_name en root aan
 # 3. Herstart nginx: docker-compose restart nginx
 
 server {
     listen 80;
-    server_name project1.localhost;  # Pas aan naar je project naam
+    server_name portfolio-site.localhost;  # Pas aan naar je project naam
     
-    root /var/www/html/project1;  # Pas aan naar je project directory
+    root /var/www/html/portfolio-site;  # Pas aan naar je project directory
     index index.php index.html index.htm;
 
     # Logging
-    access_log /var/log/nginx/project1-access.log;
-    error_log /var/log/nginx/project1-error.log;
+    access_log /var/log/nginx/portfolio-site-access.log;
+    error_log /var/log/nginx/portfolio-site-error.log;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
