--- a/docker/apache/project-template.conf
+++ b/docker/apache/project-template.conf
@@ -1,28 +1,28 @@
 # Template voor project-specifieke virtual hosts (Apache)
 # Kopieer dit bestand en pas aan voor elk project
-# Bijvoorbeeld: project1.conf, project2.conf
+# Bijvoorbeeld: portfolio-site.conf, game-website.conf
 #
 # Om te gebruiken:
-# 1. Kopieer dit bestand: cp project-template.conf project1.conf
+# 1. Kopieer dit bestand: cp project-template.conf portfolio-site.conf
 # 2. Pas de ServerName en DocumentRoot aan
 # 3. Voeg toe aan docker-compose.yml volumes:
-#    - ./docker/apache/project1.conf:/etc/apache2/sites-available/project1.conf
-# 4. Activeer: docker exec -it devbox-php-apache a2ensite project1
+#    - ./docker/apache/portfolio-site.conf:/etc/apache2/sites-available/portfolio-site.conf
+# 4. Activeer: docker exec -it devbox-php-apache a2ensite portfolio-site
 # 5. Herstart: docker-compose restart php-apache
 
 <VirtualHost *:80>
-    ServerName project1.localhost  # Pas aan naar je project naam
+    ServerName portfolio-site.localhost  # Pas aan naar je project naam
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/project1  # Pas aan naar je project directory
+    DocumentRoot /var/www/html/portfolio-site  # Pas aan naar je project directory
 
-    <Directory /var/www/html/project1>
+    <Directory /var/www/html/portfolio-site>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
 
-    ErrorLog ${APACHE_LOG_DIR}/project1-error.log
-    CustomLog ${APACHE_LOG_DIR}/project1-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/portfolio-site-error.log
+    CustomLog ${APACHE_LOG_DIR}/portfolio-site-access.log combined
 
     # PHP configuration
     <FilesMatch \.php$>
